MCStrings: Fix hex patterns when converting to components
I'm seriously starting to dislike the way Adventure forces you to build text in an object like way instead of just parsing it. I'll probably will end up making MCUtils rely on Minimessage and just translate MCUtils format to Minimessage's format.

--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -12,6 +12,7 @@ jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 adventure = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
 adventure-bukkit = { group = "net.kyori", name = "adventure-platform-bukkit", version.ref = "adventure-bukkit" }
+adventure-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure" }
 spigot = { module = "org.spigotmc:spigot-api", version.ref = "spigot" }
 velocity = { module = "com.velocitypowered:velocity-api", version.ref = "velocity" }
 
