--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -2,7 +2,7 @@
 jetbrains-annotations = "24.0.0"
 snakeyaml = "2.3"
 adventure = "4.17.0"
-adventure-bukkit = "4.3.4"
+adventure-serializer-bungee = "4.3.4"
 spigot = "1.20-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
 run-paper = "2.3.0"
@@ -11,8 +11,8 @@ run-paper = "2.3.0"
 jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations" }
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 adventure = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
-adventure-bukkit = { group = "net.kyori", name = "adventure-platform-bukkit", version.ref = "adventure-bukkit" }
-adventure-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure" }
+adventure-serializer-bungee = { group = "net.kyori", name = "adventure-text-serializer-bungeecord", version.ref = "adventure-serializer-bungee" }
+adventure-serializer-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure" }
 spigot = { module = "org.spigotmc:spigot-api", version.ref = "spigot" }
 velocity = { module = "com.velocitypowered:velocity-api", version.ref = "velocity" }
 
