--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 jetbrains-annotations = "24.0.0"
 snakeyaml = "2.3"
+adventure-api = "4.17.0"
 adventure-serializer-legacy = "4.17.0"
 adventure-serializer-bungee = "4.3.4"
 spigot = "1.20-R0.1-SNAPSHOT"
@@ -10,6 +11,7 @@ run-paper = "2.3.0"
 [libraries]
 jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations" }
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
+adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure-api" }
 adventure-serializer-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure-serializer-legacy" }
 adventure-serializer-bungee = { group = "net.kyori", name = "adventure-text-serializer-bungeecord", version.ref = "adventure-serializer-bungee" }
 spigot = { module = "org.spigotmc:spigot-api", version.ref = "spigot" }
