Added the paper platform (See desc)
Alright so this is basically just the spigot platform without any dependencies shaded into it. This is because Paper already includes everything that the MCUtils spigot platform needs as a dependency. This results in a smaller jar size (746KB vs 202KB currently). Paper only projects or paper based servers that download MCUtils as a plugin may benefit from this.

--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -5,6 +5,7 @@ adventure-api = "4.17.0"
 adventure-serializer-legacy = "4.17.0"
 adventure-serializer-bungee = "4.3.4"
 spigot = "1.20-R0.1-SNAPSHOT"
+paper = "1.21.3-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
 run-paper = "2.3.0"
 
@@ -15,6 +16,7 @@ adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "ad
 adventure-serializer-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure-serializer-legacy" }
 adventure-serializer-bungee = { group = "net.kyori", name = "adventure-text-serializer-bungeecord", version.ref = "adventure-serializer-bungee" }
 spigot = { module = "org.spigotmc:spigot-api", version.ref = "spigot" }
+paper = { module = "io.papermc.paper:paper-api", version.ref = "paper" }
 velocity = { module = "com.velocitypowered:velocity-api", version.ref = "velocity" }
 
 [plugins]
