--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Documentation
-    url: https://mcutils.xdec0de.me/
+    url: https://skyutils.codersky.net/
     about: Check the documentation first to ensure you are doing everything right.
