--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+jsky = "1.0.0-SNAPSHOT"
 jetbrains-annotations = "24.0.0"
 snakeyaml = "2.3"
 adventure-api = "4.17.0"
@@ -10,6 +11,7 @@ velocity = "3.3.0-SNAPSHOT"
 run-paper = "2.3.0"
 
 [libraries]
+jsky = { group = "net.codersky", name = "jsky", version.ref = "jsky" }
 jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations" }
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure-api" }
